# Grav

./: .gitignore  .mcp.json  CMakeLists.txt  README.md  main.cpp
editors/jetbrains/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
editors/nvim/: README.md
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
examples/: 01_basics.grav  02_functions.grav  03_control_flow.grav  04_operators.grav  05_strings.grav  06_structs_enums.grav  07_arrays.grav  08_pointers_null.grav  09_classes.grav  10_inheritance.grav  11_generics.grav  12_variadics.grav  13_exceptions.grav  14_async.grav  15_inline_c.grav  16_input.grav  17_multiple_inheritance.grav  18_stdlib.grav  19_types_io.grav  20_super_overload.grav  21_showcase.grav  all_features.c  all_features.grav  animals.grav  bank.grav  comprehensive.grav  control_flow.c  control_flow.grav  datastructures.c  datastructures.grav  exceptions.grav  generic_classes.grav  generics.grav  globals.grav  modern.c  modern.grav  shapes.grav  showcase.grav  variadics.grav
examples/import_demo/: app.c  app.grav  geometry.grav  mathutil.grav
examples/qa/: README.md  creatures.grav  main.grav  runtime.grav
lib/: README.md  array.grav  convert.grav  datetime.grav  exception.grav  fs.grav  io.grav  list.grav  map.grav  math.grav  mathf.grav  path.grav  process.grav  random.grav  set.grav  stack.grav  std.grav  string.grav
mcp_server/: README.md  server.py
src/ast/: README.md  ast.cpp  ast.h
src/codegen/: README.md  codegen.h  mangle.cpp  (+5 more)
tests/: 16_input.expected  qa_main.expected  run.sh
(+38 files in other folders)
